--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+  }
+  
+//   button {
+//     padding: 10px;
+//     background: #28a745;
+//     color: white;
+//     border: none;
+//     cursor: pointer;
+//   }
+  
